--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -214,7 +214,8 @@
             "outputs": [],
             "source": [
                 "train_data = pd.read_csv(\"../data/processed/train.csv\")\n",
-                "test_data = pd.read_csv(\"../data/processed/test.csv\")\n"
+                "test_data = pd.read_csv(\"../data/processed/test.csv\")\n",
+                "head()\n"
             ]
         },
         {
